# Refracto

./: .env  .gitignore  README.md  agent-context.json  cap_docs_vectorizer.py  feature.md  instructions.md  langchain-chat.js  langchain.js  main.py  package-lock.json  package.json  pyproject.toml  system_instructions.md
.github/workflows/: aws.yml
backend/: agent-context.json  global-prompt.txt  nodemon.json  package-lock.json  package.json  qdrant-docs
backend/src/: server.js
backend/src/controllers/: projectController.js  ticketController.js
backend/src/models/: Project.js  Session.js  Ticket.js
backend/src/routes/: projectRoutes.js  ticketRoutes.js
backend/src/services/: goose-service.js  package-lock.json  package.json
backend/src/utils/: cloneAndExtractEntities.js
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js
frontend/src/components/: ChatHistory.js  ChatPrompt.js  CodeDisplay.js  CreateTicketModal.js  TicketForm.js  TicketForm.test.js  TicketList.js
frontend/src/components/landing/: CTA.js  Features.js  Footer.js  Hero.js  Testimonials.js  TrustedBy.js
frontend/src/pages/: LandingPage.js  TicketsPage.js
frontend/src/utils/: api.js  statusUtils.js
src/qdrant_docs/: __init__.py  __main__.py  server.py
