[project]
name = "qdrant-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "filelock==3.18.0",
    "huggingface-hub==0.12.1",
    "idna==3.10",
    "Jinja2==3.1.6",
    "joblib==1.4.2",
    "MarkupSafe==3.0.2",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "numpy==2.2.4",
    "packaging==24.2",
    "pillow==11.1.0",
    "PyYAML==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "sentence-transformers==2.2.2",
    "sentencepiece==0.2.0",
    "sympy==1.13.1",
    "threadpoolctl==3.6.0",
    "tokenizers==0.13.3",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tqdm==4.67.1",
    "transformers==4.26.1",
    "typing_extensions==4.13.1",
    "urllib3==2.3.0",
    "qdrant-client==1.13.1",
    "mcp[cli]==1.6.0",
    "ruff>=0.11.8",
]

[project.scripts]
qdrant-docs = "qdrant_docs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
